# Semeseter_III

./: .gitignore  CMakeLists.txt
_CGR/CGR_SORS/: .gitignore  CMakeLists.txt  README.md  common.cmake
_CGR/CGR_SORS/CGR_Uebungen/SonnensystemVorlage/: CMakeLists.txt  myscene.cpp  myscene_template.cpp
_CGR/CGR_SORS/CGR_Uebungen/Uebung01Zeichenprogramm/: CMakeLists.txt  glwidget.cpp
_CGR/CGR_SORS/SORS/: CMakeLists.txt  shader.cpp
_CGR/CGR_SORS/SORS/SORSLib/: .gitignore
_CGR/CGR_SORS/SORS/geometry/: geometrybase.cpp  meshobj.hpp  tessplane.hpp
_CGR/CGR_SORS/SORS/rendering/: texture.cpp  texture.hpp
_CGR/CGR_SORS/SORS/transformation/: movecontroller.hpp
_CGR/CGR_SORS/SORS/win_oglbase/: openglwidget.cpp  openglwidget.hpp
_CGR/CGR_SORS/U2/: U2.txt
_CGR/CGR_SORS/doc/html/: _a_r_t_r___uebungen_2_uebung01_heightmap_2heightmap_8hpp.html  _a_r_t_r___uebungen_2_uebung01_heightmap_2heightmap_8hpp.js  _a_r_t_r___uebungen_2_uebung01_heightmap_2heightmap_8hpp__dep__incl.map  _a_r_t_r___uebungen_2_uebung01_heightmap_2heightmap_8hpp__dep__incl.md5  _a_r_t_r___uebungen_2_uebung01_heightmap_2heightmap_8hpp__incl.map  _a_r_t_r___uebungen_2_uebung01_heightmap_2heightmap_8hpp__incl.md5  _a_r_t_r___uebungen_2_uebung01_heightmap_2heightmap_8hpp_source.html  _a_r_t_r___uebungen_2_uebung01_heightmap_2myscene_8cpp.html  _a_r_t_r___uebungen_2_uebung01_heightmap_2myscene_8cpp__incl.map  _a_r_t_r___uebungen_2_uebung01_heightmap_2myscene_8cpp__incl.md5  _a_r_t_r___uebungen_2_uebung02_occlusion_c_r_2myscene_8cpp.html  _a_r_t_r___uebungen_2_uebung02_occlusion_c_r_2myscene_8cpp__incl.map  _c_g_r___uebungen_2_robot_2myscene_8cpp.html  (+1420 more)
(+161 files in other folders)
